--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
    background-color: azul indigo; 
-   color: white;
+   color: rgb(27, 25, 25);
    font-family: "Bitcount Grid Double", system-ui;
    display: flex;
    justify-content: center;
@@ -10,7 +10,15 @@ body{
 }
 
 button {
-    background-color: black;
-color:white;
+    background-color: rgb(219, 204, 204);
+color:rgb(20, 16, 16);
 font-family: "Bitcount Grid Double", system-ui;
+}
+
+.passo{
+    display: none;
+}
+
+.passo.ativo{
+    display:block;
 }
