--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-   background-color: azul indigo; 
+   background-color: azul rgb(107, 38, 65); 
    color: rgb(27, 25, 25);
    font-family: "Bitcount Grid Double", system-ui;
    display: flex;
