--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body{
 }
 
 button {
-    background-color: rgb(133, 37, 37);
-color:rgb(20, 16, 16);
+    background-color: #64A712;
+color: white;
 font-family: "Bitcount Grid Double", system-ui;
 }
 
