--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-   background-color: azul rgb(107, 38, 65); 
-   color: rgb(27, 25, 25);
+   background-color: #1D4221;
+   color: white;
    font-family: "Bitcount Grid Double", system-ui;
    display: flex;
    justify-content: center;
