--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 
 button {
     background-color: #64A712;
-color: white;
+color: rgb(167, 84, 84);
 font-family: "Bitcount Grid Double", system-ui;
 }
 
