--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
    background-color: #1D4221;
-   color: white;
+   color: rgb(105, 27, 86);
    font-family: "Bitcount Grid Double", system-ui;
    display: flex;
    justify-content: center;
